--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -1,83 +1,43 @@
-﻿<script src="~/Scripts/jquery-3.4.1.min.js"></script>
-<h4> Registration Form</h4>
-<div id="loginDiv" style="width:50%">
-    <div style="width:50%">
-        <div class="form-group">
-            <label for="txtEmail">First Name </label>
-            <input type='email' name="email" id="txtEmail" class="form-control">
-        </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" id="textPwd" class="form-control">
-        </div>
-        <div class="form-group">
-            <label>Confrim Password</label>
-            <input type="password" id="txtConfirmPwd" class="form-control">
-        </div>
-    </div>
-    <button id="register" class="btn btn-default">Submit</button>
+﻿@model IEnumerable<AddressBook.Models.ContactsInfo>
+
+@{
+    ViewBag.Title = "Contacts List";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<style>
+    .lead {
+        max-width: 350px;
+        overflow: auto;
+    }
+
+    .Edit-contacts {
+        float: right;
+        border: 1px solid black;
+        padding-right: 30px;
+        max-width: 350px;
+        display: none;
+    }
+</style>
+<h2 class="page-name">Contacts List</h2>
+
+<div class="lead">
+    <hr />
+    <table class="table table-bordered .table-hover .table-responsive">
+        <tr>
+            <th>
+                Names:
+            </th>
+            <th></th>
+        </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.ActionLink(item.fullName, "Edit", new { id = item.ID })
+                </td>
+            </tr>
+        }
+
+    </table>
 </div>
-<h4>Login </h4>
-
-<div id="loginDiv" style="width:50%">
-    <div class="form-group">
-        <label for="txtEmail">First Name </label>
-        <input type='email' name="email" id="loginEmail" class="form-control">
-    </div>
-    <div class="form-group">
-        <label>Password</label>
-        <input type="password" id="loginPwd" class="form-control">
-    </div>
-    <button id="btnLogin" class="btn btn-default">Submit</button>
-</div>
-<div>
-    <label id="msg"></label>
-</div>
-<script>
- $(document).ready(function () {
- $("#register").on('click', function () {
- var data = { Email: $("#txtEmail").val().trim(), Password: $("#textPwd").val().trim(), ConfirmPassword: $("#txtConfirmPwd").val().trim() };
- $.ajax({
-     url: "https://localhost:44336/api/Account/Register",
- type: 'POST',
- data: data,
- success: function (resp) {
- window.location.href = '/Home/Index';
- }
- })
- });
-
- $("#btnLogin").on('click', function () {
- //var data = { Email: $("#loginEmail").val().trim(), Password: $("#textPwd").val().trim(), ConfirmPassword: $("#loginPwd").val().trim() };
- $.ajax(
- {
- url: "/TOKEN",
- type: "POST",
- data: $.param({ grant_type: 'password', username: $("#loginEmail").val(), password: $("#loginPwd").val() }),
- headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
- success: function (resp) {
- sessionStorage.setItem('userName', resp.userName);
- sessionStorage.setItem('accessToken', resp.access_token);
- var authHeaders = {};
- authHeaders.Authorization = 'Bearer ' + resp.access_token;
- $.ajax({
-     url: "https://localhost:44336/api/values",
- type: "GET",
- headers: authHeaders,
- success: function (response) {
- $("#loginEmail").val("");
- $("#loginPwd").val("");
- $("#msg").text(response);
- }
- });
-
- },
- error: function () {
- $("#msg").text("Authentication failed");
- }
- })
- });
-
-
- })
-</script>
