--- a/AddressBook/Content/bootstrap.css
+++ b/AddressBook/Content/bootstrap.css
@@ -1290,15 +1290,20 @@ p {
   margin: 0 0 10px;
 }
 .lead {
-  margin-bottom: 20px;
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 1.4;
+    margin-bottom: 20px;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.4;
+    font-family: 'Monotype Corsiva';
+    overflow: auto;
+    max-height: 370px;
 }
 @media (min-width: 768px) {
-  .lead {
-    font-size: 21px;
-  }
+    .lead {
+        font-size: 18px;
+        max-width: 350px;
+        overflow: auto;
+    }
 }
 small,
 .small {
