--- a/AddressBook/Views/Home/LoginRegister.cshtml
+++ b/AddressBook/Views/Home/LoginRegister.cshtml
@@ -41,7 +41,8 @@
      url: "https://localhost:44336/api/Account/Register",
  type: 'POST',
  data: data,
- success: function (resp) {
+     success: function (resp) {
+         alert("oyeeeeeeee");
  window.location.href = '/Home/Index';
  }
  })
