--- a/AddressBook/Content/bootstrap.css
+++ b/AddressBook/Content/bootstrap.css
@@ -1268,8 +1268,19 @@ h1,
 }
 h2,
 .h2 {
-  font-size: 30px;
+  font-size: 18px;
 }
+
+@media (min-width: 768px) {
+    .page-name {
+        font-size: 30px;
+    }
+}
+
+.page-name {
+    padding-top: 40px;
+}
+
 h3,
 .h3 {
   font-size: 24px;
