--- a/AddressBook/Views/Home/Index.cshtml
+++ b/AddressBook/Views/Home/Index.cshtml
@@ -24,9 +24,9 @@
 @*@Html.ActionLink("Delete", null, null, new { @id = "myLink", onclick = "numberDelete(" + item.ID + "," + Model.ID + ")" })*@
 <div class="lead">
     <hr />
-    <table class="table table-bordered .table-hover .table-responsive">
+    <table class="table table-bordered table-hover table-responsive">
         <tr>
-            <th>
+            <th colspan="2">
                 Names:
             </th>
             @*<th></th>*@
