--- a/AddressBook/Content/bootstrap.css
+++ b/AddressBook/Content/bootstrap.css
@@ -3103,6 +3103,18 @@ select[multiple].input-lg {
     text-align: right;
   }
 }
+@media screen and (min-width:768px) {
+    .image-container {
+        height: 100px;
+        width: 90px;
+        padding: 50px;
+    }
+}
+.image-container {
+    height: 250px;
+    width: 200px;
+    padding: 100px;
+}
 .form-horizontal .has-feedback .form-control-feedback {
   right: 15px;
 }
