--- a/AddressBook/Views/Shared/_Layout.cshtml
+++ b/AddressBook/Views/Shared/_Layout.cshtml
@@ -27,14 +27,15 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container">
         @RenderBody()
         <hr />
+    </div>
+    <div class="container body-content">
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
