--- a/AddressBook/Views/Home/Create.cshtml
+++ b/AddressBook/Views/Home/Create.cshtml
@@ -25,7 +25,7 @@
         </div>
 
         <div class="form-group">
-            @Html.Label("Nick Name", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("NickName ", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.nickName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.nickName, "", new { @class = "text-danger" })
@@ -33,7 +33,7 @@
         </div>
 
         <div class="form-group">
-            @Html.Label("Email ID", htmlAttributes: new { @class = "control-label col-md-2", @placeholder = "example@xyz.com" })
+            @Html.Label("Email ID", htmlAttributes: new { @class = "control-label col-md-2", placeholder = "example@xyz.com" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.emailID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.emailID, "", new { @class = "text-danger" })
@@ -43,7 +43,7 @@
         <div class="form-group">
             @Html.Label("DOB ", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.dob, new { htmlAttributes = new { @class = "form-control", @placeholder = "MM/dd/yyyy" } })
+                @Html.EditorFor(model => model.dob, new { htmlAttributes = new { @class = "form-control", placeholder = "MM/dd/yyyy" } })
                 @Html.ValidationMessageFor(model => model.dob, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -56,11 +56,11 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.Label("Phone Number Details:", new { @class = "control-label col-md-2" })
-        </div>
+        </div>*@
         <div>
-            @Html.Partial("_PhoneNumbers")
+            @Html.Partial("_PhoneNumbers",new ViewDataDictionary())
         </div>
 
         <div class="form-group">
