Added null check in Edit view and provided exception handling for DOB on create view

--- a/AddressBook/Views/Home/Edit.cshtml
+++ b/AddressBook/Views/Home/Edit.cshtml
@@ -72,7 +72,14 @@
             </div>
         </div>
         <div id="PhoneNumberDetails">
-            @Html.Partial("_ViewPhoneNumber", Model.phoneNumbers)
+            @if (Model.phoneNumbers != null)
+            {
+                @Html.Partial("_ViewPhoneNumber", Model.phoneNumbers)
+            }
+            else
+            {
+             @Html.Partial("_ViewPhoneNumber", new ViewDataDictionary())
+            }
         </div>
         <div id="EditPhoneNumberDetails">
             @Html.Partial("_EditPhoneNumber", Model)
