--- a/AddressBook/Views/Home/Create.cshtml
+++ b/AddressBook/Views/Home/Create.cshtml
@@ -44,7 +44,7 @@
             @Html.Label("DOB ", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.dob, new { htmlAttributes = new { @class = "form-control", placeholder = "MM/dd/yyyy" } })
-                @Html.ValidationMessageFor(model => model.dob, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.dob, "", new { @class = "text-danger", @id = "errormsg" })
             </div>
         </div>
 
@@ -56,12 +56,11 @@
             </div>
         </div>
 
-        @*<div class="form-group">
-            @Html.Label("Phone Number Details:", new { @class = "control-label col-md-2" })
-        </div>*@
         <div>
-            @Html.Partial("_PhoneNumbers",new ViewDataDictionary())
+            @Html.Partial("_PhoneNumbers", new ViewDataDictionary())
         </div>
+
+        <label id="error" class = "text-danger"></label>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -106,12 +105,18 @@
             success: function (data) {
                
             },
-            error: function (xhr, ajaxOptions, thrownError) {
-                if (xhr.status == 404) {
-                    alert(thrownError);
-                    alert("Error occured");
-                    $('#someText').text('Cannot find this record');
+            //error: function (xhr, ajaxOptions, thrownError) {
+            //    if (xhr.status == 404) {
+            //        alert(thrownError);
+            //        alert("Error occured");
+            //        $('#someText').text('Cannot find this record');
+            //    }
+            //}
+            error: function (request, message, error) {
+                if (request.responseJSON != null) {
+                    $('#error').text(request.responseJSON.Message);
                 }
+
             }
         });
             })
