--- a/AddressBook/Views/Shared/_EditPhoneNumber.cshtml
+++ b/AddressBook/Views/Shared/_EditPhoneNumber.cshtml
@@ -13,23 +13,25 @@
                 </th>
                 <th colspan="2">Number</th>
             </tr>
-
-            @foreach (var item in Model.phoneNumbers)
+            @if (Model.phoneNumbers != null)
             {
-                <tr>
-                    <td>
-                        @Html.EditorFor(a => item.type, new { htmlAttributes = new { @class = "form-control" } })
-                    </td>
-                    <td>
-                        @Html.EditorFor(a => item.Number, new { htmlAttributes = new { @class = "form-control" } })
-                    </td>
-                    <td>
-                        @Html.ActionLink("Delete", null, null, new { @id = "myLink", onclick = "numberDelete(" + item.ID + "," + Model.ID + ")" })
-                    </td>
-                </tr>
+                foreach (var item in Model.phoneNumbers)
+                {
+                    <tr>
+                        <td>
+                            @Html.EditorFor(a => item.type, new { htmlAttributes = new { @class = "form-control" } })
+                        </td>
+                        <td>
+                            @Html.EditorFor(a => item.Number, new { htmlAttributes = new { @class = "form-control" } })
+                        </td>
+                        <td>
+                            @Html.ActionLink("Delete", null, null, new { @id = "myLink", onclick = "numberDelete(" + item.ID + "," + Model.ID + ")" })
+                        </td>
+                    </tr>
+                }
             }
 
-        </table>
+            </table>
     </div>
 }
 
