--- a/AddressBook/Views/Shared/_ViewPhoneNumber.cshtml
+++ b/AddressBook/Views/Shared/_ViewPhoneNumber.cshtml
@@ -13,8 +13,10 @@
                 </th>
                 <th>Number</th>
             </tr>
-            @foreach (var item in Model)
+            @if (Model != null)
             {
+                foreach (var item in Model)
+                {
 
                 <tr>
                     <td>
@@ -28,8 +30,8 @@
                         @Html.ActionLink("Delete", null, null, new { @id = "myLink", onclick = "numberDelete(" + item.ID + "," + Model.ID + ")" })
                     </td>*@
                 </tr>
+                }
             }
-
         </table>
     </div>
 }
