--- a/AddressBook/Views/Shared/_EditPhoneNumber.cshtml
+++ b/AddressBook/Views/Shared/_EditPhoneNumber.cshtml
@@ -8,15 +8,19 @@
         <hr />
         <table class="table table-hover table-responsive">
             <tr>
+                <th></th>
                 <th>
                     Type
                 </th>
-                <th colspan="2">Number</th>
+                <th>Number</th>
             </tr>
 
             @foreach (var item in Model.phoneNumbers)
             {
                 <tr>
+                    <td>
+                        @Html.HiddenFor(model => item.ID)
+                    </td>
                     <td>
                         @Html.EditorFor(a => item.type, new { htmlAttributes = new { @class = "form-control" } })
                     </td>
